# bc-runtime

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cppcheck-suppressions.txt  meson.build  meson_options.txt  valgrind.supp
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_bc_runtime_lifecycle.c  bench_bc_runtime_logging.c  bench_bc_runtime_overhead.c  bench_bc_runtime_vs_libc.c  meson.build
debian/: changelog  control  copyright  rules
fuzzing/: fuzz_bc_runtime_cli_parse.c  fuzz_bc_runtime_config.c  fuzz_bc_runtime_config_load_buffer.c  fuzz_bc_runtime_error_collector_append.c  meson.build
fuzzing/corpus/bc_runtime_config_load_buffer/: seed_basic.ini  seed_empty_key.ini  seed_invalid.ini  seed_whitespace.ini
include/internal/: bc_runtime_internal.h
include/public/: bc_runtime.h  bc_runtime_cli.h  bc_runtime_error_collector.h
src/: meson.build
src/app/: bc_runtime_accessors.c  bc_runtime_error_collector.c  bc_runtime_lifecycle.c
src/cli/: bc_runtime_cli.c
src/config/: bc_runtime_config.c
src/log/: bc_runtime_log.c
src/metrics/: bc_runtime_metrics.c
tests/: meson.build  test_bc_runtime_accessors.c  test_bc_runtime_cli.c  test_bc_runtime_config_edge_cases.c  test_bc_runtime_config_env_cli.c  test_bc_runtime_config_errors.c  test_bc_runtime_config_file.c  test_bc_runtime_config_getters.c  test_bc_runtime_config_store.c  test_bc_runtime_error_collector.c  test_bc_runtime_lifecycle.c  test_bc_runtime_lifecycle_errors.c  test_bc_runtime_log.c  test_bc_runtime_log_buffer.c  test_bc_runtime_log_edge_cases.c  test_bc_runtime_log_errors.c  test_bc_runtime_metrics.c  test_bc_runtime_metrics_errors.c
