option('tests',      type : 'boolean', value : false, description : 'Build tests')
option('benchmarks', type : 'boolean', value : false, description : 'Build benchmarks')
option('fuzzing',    type : 'boolean', value : false, description : 'Build fuzz harnesses')
option('arch',       type : 'string',  value : '',    description : 'Target architecture for -march (empty = native)')
